# sentence-transformer-implementation

./: README.md  pyproject.toml
core/: dataloader.py  multi_task.py  sentence_transformer.py  test_classification.py  train.py  train_models.py
test/: test_sentence_transformer.py
