[tool.poetry]
name = "sentence-transformer-implementation"
version = "0.1.0"
description = ""
authors = ["Andy Spezzatti <andyspezzatti@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
torch = "^2.6.0"
transformers = "^4.49.0"
datasets = "^3.3.2"
pandas = "^2.2.3"
numpy = "^2.2.3"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
matplotlib = "^3.10.1"
tensorboard = "^2.19.0"
seaborn = "^0.13.2"
seqeval = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
